--- a/index.html
+++ b/index.html
@@ -29,221 +29,299 @@
   <body>
     <header class="page-header">
       <div class="container header-container">
-      <nav class="nav-page">
-        <a class="logo header-logo" href="./index.html">
-          Web<span class="studio">Studio</span>
-        </a>
-        <ul class="header-list">
-          <li class="header-list-item"><a class="header-link" href="./index.html">Studio</a></li>
-          <li class="header-list-item"><a class="header-link" href="">Portfolio</a></li>
-          <li class="header-list-item"><a class="header-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="contacts-list">
-          <li class="contacts-list-item">
-            <a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="contacts-list-item">
-            <a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+        <nav class="nav-page">
+          <a class="logo header-logo" href="./index.html">
+            Web<span class="studio">Studio</span>
+          </a>
+          <ul class="header-list">
+            <li class="header-list-item">
+              <a class="header-link current" href="./index.html">Studio</a>
+            </li>
+            <li class="header-list-item">
+              <a class="header-link" href="">Portfolio</a>
+            </li>
+            <li class="header-list-item">
+              <a class="header-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="contacts-list">
+            <li class="contacts-list-item">
+              <a class="contacts" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-list-item">
+              <a class="contacts" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <main>
       <!-- ===== HERO ===== -->
       <section class="section hero">
         <div class="container hero-container">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="button" type="button">Order Service</button>
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="button" type="button">Order Service</button>
         </div>
       </section>
-      
+
       <!-- ===== ABOUT ===== -->
       <section class="section">
         <div class="container">
-        <h2 class="visually-hidden" >about</h2>
-        <ul class="about-list">
-          <li class="about-list-point">
-            <h3 class="about-list-item">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="about-list-point">
-            <h3 class="about-list-item">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="about-list-point">
-            <h3 class="about-list-item">Diligence</h3>
-            <p class="text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="about-list-point">
-            <h3 class="about-list-item">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+          <h2 class="visually-hidden">about</h2>
+          <ul class="about-list">
+            <li class="about-list-point">
+              <div class="about-icon">
+                <svg class="icons-about" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
+              <h3 class="about-list-item">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="about-list-point">
+              <div class="about-icon">
+                <svg class="icons-about" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
+              <h3 class="about-list-item">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="about-list-point">
+              <div class="about-icon">
+                <svg class="icons-about" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
+              <h3 class="about-list-item">Diligence</h3>
+              <p class="text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="about-list-point">
+              <div class="about-icon">
+                <svg class="icons-about" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+              <h3 class="about-list-item">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
-      
+
       <!-- ===== TEAM ===== -->
       <section class="section team">
         <div class="container">
-        <h2 class="section-title team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-card">
-            <img class="team-card-avatar"
-              src="./images/mark.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <div class="member-container">
-            <h3 class="team-member">Mark Guerrero</h3>
-            <p class="text team-spec">Product Designer</p>
-            </div>
-          </li>
-          <li class="team-card">
-            <img class="team-card-avatar"
-              src="./images/tom.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <div class="member-container">
-            <h3 class="team-member">Tom Ford</h3>
-            <p class="text team-spec">Frontend Developer</p>
-            </div>
-          </li>
-          <li class="team-card">
-            <img class="team-card-avatar"
-              src="./images/camila.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <div class="member-container">
-            <h3 class="team-member">Camila Garcia</h3>
-            <p class="text team-spec">Marketing</p>
-            </div>
-          </li>
-          <li class="team-card">
-            <img class="team-card-avatar"
-              src="./images/daniel.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <div class="member-container">
-            <h3 class="team-member">Daniel Wilson</h3>
-            <p class="text team-spec">UI Designer</p>
-            </div>
-          </li>
-        </ul>
+          <h2 class="section-title team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-card">
+              <img
+                class="team-card-avatar"
+                src="./images/mark.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="member-container">
+                <h3 class="team-member">Mark Guerrero</h3>
+                <p class="text team-spec">Product Designer</p>
+              </div>
+              <ul class="social-list">
+                <li class="social-list-item">
+                  <div class="social-list-container">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </div>
+                </li>
+                <li class="social-list-item">
+                  <div class="social-list-container">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </div>
+                </li>
+                <li class="social-list-item">
+                  <div class="social-list-container">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </div>
+                </li>
+                <li class="social-list-item">
+                  <div class="social-list-container">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </div>
+                </li>
+              </ul>
+            </li>
+            <li class="team-card">
+              <img
+                class="team-card-avatar"
+                src="./images/tom.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="member-container">
+                <h3 class="team-member">Tom Ford</h3>
+                <p class="text team-spec">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                class="team-card-avatar"
+                src="./images/camila.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="member-container">
+                <h3 class="team-member">Camila Garcia</h3>
+                <p class="text team-spec">Marketing</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                class="team-card-avatar"
+                src="./images/daniel.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="member-container">
+                <h3 class="team-member">Daniel Wilson</h3>
+                <p class="text team-spec">UI Designer</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
       <!-- ===== PORTFOLIO ===== -->
       <section class="section">
         <div class="container">
-        <h2 class="section-title portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-list-item">
-            <img class="portfolio-img"
-              src="./images/portfolio/bank.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-container">
-            <h3 class="avatar-title">Banking App</h3>
-            <p class="text portfolio-text">App</p>
-            </div>
-          </li>
-          <li class="portfolio-list-item">
-            <img class="portfolio-img"
-              src="./images/portfolio/cashless.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-container">
-            <h3 class="avatar-title">Cashless Payment</h3>
-            <p class="text portfolio-text">Marketing</p>
-            </div>
-          </li>
-          <li class="portfolio-list-item">
-            <img class="portfolio-img"
-              src="./images/portfolio/meditation.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-container">
-            <h3 class="avatar-title">Meditation App</h3>
-            <p class="text portfolio-text">App</p>
-            </div>
-          </li>
-          <li class="portfolio-list-item">
-            <img class="portfolio-img"
-              src="./images/portfolio/taxi.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-container">
-            <h3 class="avatar-title">Taxi Service</h3>
-            <p class="text portfolio-text">Marketing</p>
-            </div>
-          </li>
-          <li class="portfolio-list-item">
-            <img class="portfolio-img"
-              src="./images/portfolio/screen.jpg"
-              alt="Screen Illustration"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-container">
-            <h3 class="avatar-title">Screen Illustrations</h3>
-            <p class="text portfolio-text">Design</p>
-            </div>
-          </li>
-          <li class="portfolio-list-item">
-            <img class="portfolio-img"
-              src="./images/portfolio/online.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-container">
-            <h3 class="avatar-title">Online Courses</h3>
-            <p class="text portfolio-text">Marketing</p>
-            </div>
-          </li>
-        </ul>
+          <h2 class="section-title portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio/bank.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-container">
+                <h3 class="avatar-title">Banking App</h3>
+                <p class="text portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio/cashless.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-container">
+                <h3 class="avatar-title">Cashless Payment</h3>
+                <p class="text portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio/meditation.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-container">
+                <h3 class="avatar-title">Meditation App</h3>
+                <p class="text portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio/taxi.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-container">
+                <h3 class="avatar-title">Taxi Service</h3>
+                <p class="text portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio/screen.jpg"
+                alt="Screen Illustration"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-container">
+                <h3 class="avatar-title">Screen Illustrations</h3>
+                <p class="text portfolio-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio/online.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-container">
+                <h3 class="avatar-title">Online Courses</h3>
+                <p class="text portfolio-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
     <!-- ====    FOOTER   ==== -->
     <footer class="footer">
       <div class="container footer-container">
-      <a class="logo foot-logo" href="./index.html">
-        Web<span class="foot-studio">Studio</span>
-      </a>
-      <p class="foot-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+        <a class="logo foot-logo" href="./index.html">
+          Web<span class="foot-studio">Studio</span>
+        </a>
+        <p class="foot-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
