--- a/index.html
+++ b/index.html
@@ -143,45 +143,45 @@
               <div class="member-container">
                 <h3 class="team-member">Mark Guerrero</h3>
                 <p class="text team-spec">Product Designer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                </ul>
               </div>
-              <ul class="social-list">
-                <li class="social-list-item">
-                  <div class="social-list-container">
-                    <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </div>
-                </li>
-                <li class="social-list-item">
-                  <div class="social-list-container">
-                    <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </div>
-                </li>
-                <li class="social-list-item">
-                  <div class="social-list-container">
-                    <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </div>
-                </li>
-                <li class="social-list-item">
-                  <div class="social-list-container">
-                    <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </div>
-                </li>
-              </ul>
             </li>
             <li class="team-card">
               <img
@@ -194,6 +194,44 @@
               <div class="member-container">
                 <h3 class="team-member">Tom Ford</h3>
                 <p class="text team-spec">Frontend Developer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -207,6 +245,44 @@
               <div class="member-container">
                 <h3 class="team-member">Camila Garcia</h3>
                 <p class="text team-spec">Marketing</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -220,6 +296,44 @@
               <div class="member-container">
                 <h3 class="team-member">Daniel Wilson</h3>
                 <p class="text team-spec">UI Designer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                  <li class="social-list-item">
+                    <div class="social-list-container">
+                      <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -231,13 +345,23 @@
           <h2 class="section-title portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/bank.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-list-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/bank.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-overlay">
+                  <p class="portfolio-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
+
               <div class="portfolio-container">
                 <h3 class="avatar-title">Banking App</h3>
                 <p class="text portfolio-text">App</p>
@@ -251,6 +375,7 @@
                 width="360"
                 height="300"
               />
+
               <div class="portfolio-container">
                 <h3 class="avatar-title">Cashless Payment</h3>
                 <p class="text portfolio-text">Marketing</p>
@@ -315,13 +440,56 @@
     <!-- ====    FOOTER   ==== -->
     <footer class="footer">
       <div class="container footer-container">
-        <a class="logo foot-logo" href="./index.html">
-          Web<span class="foot-studio">Studio</span>
-        </a>
-        <p class="foot-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-logo-container">
+          <a class="logo foot-logo" href="./index.html">
+            Web<span class="foot-studio">Studio</span>
+          </a>
+          <p class="foot-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social">
+          <p class="footer-social-text">Social media</p>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <div class="footer-social-container">
+                <a href="" class="footer-social-link">
+                  <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="footer-social-item">
+              <div class="footer-social-container">
+                <a href="" class="footer-social-link">
+                  <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="footer-social-item">
+              <div class="footer-social-container">
+                <a href="" class="footer-social-link">
+                  <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li class="footer-social-item">
+              <div class="footer-social-container">
+                <a href="" class="footer-social-link">
+                  <svg class="footer-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
