--- a/index.html
+++ b/index.html
@@ -353,13 +353,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="portfolio-overlay">
-                  <p class="portfolio-overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
 
               <div class="portfolio-container">
@@ -368,13 +366,20 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/cashless.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-list-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/cashless.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
 
               <div class="portfolio-container">
                 <h3 class="avatar-title">Cashless Payment</h3>
@@ -382,52 +387,84 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/meditation.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-list-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/meditation.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-container">
                 <h3 class="avatar-title">Meditation App</h3>
                 <p class="text portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/taxi.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-list-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/taxi.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-container">
                 <h3 class="avatar-title">Taxi Service</h3>
                 <p class="text portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/screen.jpg"
-                alt="Screen Illustration"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-list-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/screen.jpg"
+                  alt="Screen Illustration"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-container">
                 <h3 class="avatar-title">Screen Illustrations</h3>
                 <p class="text portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/online.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-list-container">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/online.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="portfolio-container">
                 <h3 class="avatar-title">Online Courses</h3>
                 <p class="text portfolio-text">Marketing</p>
